src/components/enquire-modal/enquire-modal.css
:host {
  --font-family: var(--leibal-components-font-family, sans-serif);
  --color-light: #fff;
  --color-dark: #222;

  font-family: var(--font-family);
  display: block;
}

.enquire-card {
  @apply block md:grid md:grid-cols-12 md:gap-8;

  &__preview-image {
    @apply md:col-span-8;

    position: relative;
    width: 100%;
    aspect-ratio: auto 1 / 1;
    overflow: hidden;

    & > * {
      position: absolute;
      width: 100%;
      height: 100%;
      background-position: center;
      background-size: cover;
      opacity: 0;
      transition: opacity 300ms ease-in-out;
    }

    & > *:first-child {
      opacity: 1;
    }

    &:hover > *:nth-child(2) {
      opacity: 1;
    }
  }

  &__info {
    @apply md:col-span-4 flex flex-col md:justify-between font-light text-xs;

    &__enquire {
      @apply mb-1 uppercase;
    }

    &__title {
      @apply font-normal;
    }
  }

  &__button {
    @apply col-span-8;
  }
}

.enquire-modal {
  &__modal {
    @apply absolute top-0 bottom-0 left-0 right-0 z-50 h-[300vh];

    opacity: 0;
    visibility: hidden;
    background: rgba(0, 0, 0, 0.5);
    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;

    &--visible {
      opacity: 1;
      visibility: visible;
      transition: visibility 0s linear 0s, opacity 0.25s 0s, transform 0.25s;
    }

    &__content {
      @apply md:grid md:grid-cols-10 md:gap-8 bg-white p-16 relative;
    }

    &__close {
      @apply absolute top-3 right-3 cursor-pointer leading-none text-xl font-light;
    }
  }
}

